# hotbunk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
content/: explainer-full.md  short-the-bunk.md  short-the-consent.md  short-the-math.md  visual-specs.md
deploy/: hotbunk.service  launch-submarine.sh
docs/: CNAME  demo-script.sh  demo.cast  index.html
docs/plans/: 2026-03-25-daemon.md  2026-03-25-hotbunk-design.md
drafts/: anthropic-discord.md  demo-script.sh  hackernews.md  reddit-r-claudeai.md  reddit-r-localllama.md
src/hotbunk/: __init__.py  accounts.py  cli.py  daemon.py  db.py  detector.py  monitor.py  pool.py  runner.py  throttle_detector.py
tests/: test_cli_daemon.py  test_daemon.py  test_db.py  test_integration.py  test_runner.py  test_throttle_detector.py
