[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotbunk"
version = "0.1.0"
description = "Cooperative compute orchestrator for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Drew Beyersdorf" },
]
keywords = [
    "claude",
    "claude-code",
    "anthropic",
    "rate-limiting",
    "load-balancer",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://hotbunk.dev"
Repository = "https://github.com/drewbeyersdorf/hotbunk"
Issues = "https://github.com/drewbeyersdorf/hotbunk/issues"
Documentation = "https://hotbunk.dev"

[project.scripts]
hotbunk = "hotbunk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
